# L-Sets

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fuzzySets.cabal  test.hs
.github/workflows/: haskell.yml
app/: FuzzySet.hs  FuzzyStructure.hs  LSet.hs  Main.hs  MembershipFunctions.hs
app/FuzzyRelations/: FuzzyRelation.hs  LRelation.hs  MembershipFunctions.hs  Properties.hs  RelationComposition.hs
app/FuzzySets/: Cardinality.hs  FuzzySet.hs  LSet.hs  MembershipFunctions.hs  Properties.hs
app/Lattices/: BooleanAlgebra.hs  CompleteResiduatedLattice.hs  ResiduatedLattice.hs  UnitInterval.hs
app/Lattices/UnitIntervalStructures/: Godel.hs  Lukasiewicz.hs  Product.hs
app/Utils/: Utils.hs
src/: FuzzySet.hs  Main.hs
src/Fuzzy/Relations/: LRelation.hs  MembershipFunctions.hs  Properties.hs  RelationComposition.hs
src/Fuzzy/Sets/: Cardinality.hs  LSet.hs  MembershipFunctions.hs  Properties.hs
src/Lattices/: ResiduatedLattice.hs  UnitInterval.hs
src/Lattices/UnitIntervalStructures/: Godel.hs  Lukasiewicz.hs  Product.hs
src/Utils/: Utils.hs
test/: Tests.hs  UnitIntervalStructuresTest.hs
test/Fuzzy/Relations/: LRelationTest.hs  PropertiesTest.hs
test/Fuzzy/Sets/: LSetTest.hs  MembershipFunctionsTest.hs  PropertiesTest.hs
test/Utils/: Utils.hs
