cabal-version:      2.4
name:               fuzzySets
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lukas Balog
maintainer:         lukasbalog66@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable fuzzySets
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        FuzzySets.FuzzySet
        FuzzySets.MembershipFunctions
        FuzzySets.Cardinality
        FuzzySets.Properties
        FuzzyRelations.FuzzyRelation
        FuzzyRelations.MembershipFunctions
        FuzzyRelations.RelationComposition
        FuzzyRelations.Properties
        Lattices.ResiduatedLattice
        Lattices.ResiduatedLattice
        Lattices.UnitInterval
        Lattices.UnitIntervalStructures.Godel
        Lattices.UnitIntervalStructures.Lukasiewicz
        Lattices.UnitIntervalStructures.Product

    --LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
