cabal-version:      2.4
name:               fuzzySets
version:            0.1.0.0
category:           Math
license:            MIT
author:             Lukas Balog <lukasbalog66@gmail.com>
maintainer:         Lukas Balog <lukasbalog66@gmail.com>
homepage:           https://github.com/luckyluke66/L-Sets

synopsis:
    Library for constructing and manipulating fuzzy sets and fuzzy relations.

description:
    In mathematics Fuzzy Set is a generalization of standart set
    In set elements can either belong to that set or not.
    When it comes to fuzzy sets, elements belong to a fuzzy set in a degree.

    This package provide functions for working with fuzzy sets and fuzzy relations.

source-repository head
    type:           git
    location:       https://github.com/luckyluke66/L-Sets 

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src

    exposed-modules:
        FuzzySet
        Fuzzy.Sets.LSet
        Fuzzy.Sets.MembershipFunctions
        Fuzzy.Sets.Cardinality
        Fuzzy.Sets.Properties
        Fuzzy.Relations.LRelation
        Fuzzy.Relations.MembershipFunctions
        Fuzzy.Relations.RelationComposition
        Fuzzy.Relations.Properties
        Lattices.ResiduatedLattice
        Lattices.UnitInterval
        Lattices.UnitIntervalStructures.Godel
        Lattices.UnitIntervalStructures.Lukasiewicz
        Lattices.UnitIntervalStructures.Product

    other-modules:
        Utils.Utils



    build-depends:    
        base ^>=4.16.4.0,
        containers^>=0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010
